Pulled startup methods into a Service